@@ -1,8 +1,9 @@
 Revision history for Pandoc-Elements
 
 {{$NEXT}}
+    - new method from_json for parsing
     - added inheritance and is_... methods
-    - use blessed objects with method json
+    - use blessed objects with method to_json
 
 0.02  2014-10-26 10:34:37 CET
     - added Pandoc::Walker
